# cognitive-project-layer

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  NOTICE  README.md  SECURITY.md  install.ps1  install.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: benchmarks.yml  ci.yml  release.yml
assets/: dashboard.css  dashboard.html  dashboard.js
docs/: CONFIG.md  EVALS.md  INSTALL.md  OPENCODE.md  PERSISTENCE.md  PROFILES.md  PUBLIC_RELEASE_CHECKLIST.md  ROADMAP.md  SCALE.md  SPEC.md  UI.md
evals/: retrieval.json
evals/fixtures/arkts-harmonyos/: build-profile.json5  oh-package.json5
evals/fixtures/arkts-harmonyos/entry/src/main/: module.json5
evals/fixtures/small-rust/: Cargo.toml
evals/fixtures/small-rust/src/: auth.rs  lib.rs  session.rs
evals/fixtures/small-ts/: package.json
evals/fixtures/small-ts/src/: auth.ts  index.ts  routes.ts
examples/: cpl.config.toml  opencode.native.json  opencode.python.json
scripts/: bench_cli.py  bench_large_repo.py  bench_mcp.py  check_bench_thresholds.py  cpl_opencode_mcp.py  eval_file_localization.py  eval_public_codesearchnet.py  eval_retrieval.py
src/: ast.rs  background.rs  budget.rs  chunk.rs  confidence.rs  config.rs  dashboard.rs  doctor.rs  embedding.rs  graph.rs  http_server.rs  indexer.rs  lib.rs  main.rs  mcp_server.rs  memory.rs  persistent_index.rs  persistent_vector.rs  qdrant.rs  references.rs  retrieval.rs  scanner.rs  self_heal.rs  skeleton.rs  symbols.rs  tools.rs  transparency.rs  vector.rs  watcher.rs
(+2 files in other folders)
