[package]
name = "cognitive-project-layer"
version = "0.1.2"
edition = "2024"
rust-version = "1.85"
description = "Cognitive Project Layer: project scanner, skeleton, symbol index, graph, local RAG, confidence, memory, and context budget for coding agents."
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/kharkilirov1/cognitive-project-layer"
homepage = "https://github.com/kharkilirov1/cognitive-project-layer"
documentation = "https://github.com/kharkilirov1/cognitive-project-layer/tree/main/docs"
keywords = ["agents", "mcp", "rag", "code-search", "context"]
categories = ["command-line-utilities", "development-tools"]
default-run = "cpl"
exclude = [
    ".cpl/**",
    ".playwright-mcp/**",
    "target/**",
    "opencode.json",
    "scripts/__pycache__/**",
    "*.pyc",
    "Cargo.toml.orig",
]

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
notify = "8.2.0"
regex = "1.11"
reqwest = { version = "0.13.3", features = ["blocking", "json", "rustls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.11.0"
tree-sitter = "0.26.8"
tree-sitter-cpp = "0.23.4"
tree-sitter-go = "0.25.0"
tree-sitter-javascript = "0.25.0"
tree-sitter-python = "0.25.0"
tree-sitter-rust = "0.24.2"
tree-sitter-typescript = "0.23.2"
walkdir = "2.5"
once_cell = "1.20"
lru = "0.12"

[[bin]]
name = "cpl"
path = "src/main.rs"

[[bin]]
name = "cpl-mcp"
path = "src/bin/cpl-mcp.rs"
